k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-service
  labels:
    app: nexus
spec:
  type: ClusterIP
  selector:
    app: nexus
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
